# OhRAG

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/database/: crud.py  models.py  schemas.py
app/exceptions/: common.py
app/loader/: __init__.py  base.py  default.py  patch.py  spliters.py
app/routers/: chunk.py  document.py  namespace.py  query.py
